# SFMLGame

./: CMakeLists.txt  main.cpp
include/: Entity.h  Game.h  Player.h
